2006-12-22  Donal K. Fellows  <dkf@users.sf.net>

	* library/msgs/es_ES.msg (removed):
	* library/msgs/es.msg: Fixed translation fault that was present in all
	Spanish-speaking locales. [Bug 1111213]

2006-12-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinButton.c (TkpDisplayButton): lint init. [Bug 1618604]

2006-12-19  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4 (Darwin): --enable-64bit: verify linking with 64bit -arch
	flag succeeds before enabling 64bit build.
	* unix/configure: autoconf-2.59

2006-12-18  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTreeview.c, library/ttk/treeview.tcl, doc/treeview.n:
	Added column '-stretch' and '-minwidth' options.
	Improved column drag and resize behavior.
	Added horizontal scrolling [#1518650].
	Row height and child indent specifiable on Treeview style.
	Decreased default row height, no default -padding.
	Use correct heading height [#1163349].
	Apply tag settings to tree item as well as to data columns 
	[NOTE: 'tag configure' still buggy].
	Fix off-by-one condition when moving nodes forward [#1618142]
	* generic/ttk/ttkScroll.c(TtkScrollTo): Prevent overscroll ([#1173434])
	* library/ttk/altTheme.tcl, library/ttk/aquaTheme.tcl,
	library/ttk/clamTheme.tcl, library/ttk/classicTheme.tcl,
	library/ttk/defaults.tcl, library/ttk/winTheme.tcl
	library/ttk/xpTheme.tcl: Per-theme treeview settings.
	* macosx/ttkMacOSXTheme.c: Added disclosure triangle element.

2006-12-17  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/combobox.tcl, generic/ttk/ttkEntry.c,
	* doc/ttk_combobox.n: Add combobox -height option; only show scrollbar
	if the listbox needs to scroll. [Bug 1032869]

2006-12-16  Mo DeJong  <mdejong@users.sourceforge.net>

	* doc/cursors.n: Mention "none" in supported cursor list. Fix comment
	that incorrectly claims that the Win32 "no" cursor hides the cursor.
	* tests/cursor.test: Test "none" cursor.
	* unix/tkUnixCursor.c (CreateCursorFromTableOrFile)